--- a/project-first/index.html
+++ b/project-first/index.html
@@ -1,22 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/css/w3.css">
-    <link rel="stylesheet" href="/css/solid.min.css">
-    <link rel="stylesheet" href="/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/css/brands.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/css/solid.min.css">
+    <link rel="stylesheet" href="/css/brands.min.css">
   </head>
   <body>
-    <i class="fa-brands fa-vuejs"></i>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
-
-    <!-- my icon -->
-    <i class="fa-brands fa-vuejs"></i>
   </body>
 </html>
